force-app/main/default/objects/HP_EC_Sharegroop_Setting__mdt/HP_EC_Sharegroop_Setting__mdt.object-meta.xml
<CustomObject>
    <label>HP EC Sharegroop Setting</label>
    <pluralLabel>HP EC Sharegroop Settings</pluralLabel>
</CustomObject>