force-app/main/default/objects/HP_EC_Sharegroop_Setting__mdt/fields/currency__c.field-meta.xml
<CustomField>
    <fullName>currency__c</fullName>
    <label>currency</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>