force-app/main/default/objects/HP_EC_Sharegroop_Setting__mdt/fields/locale__c.field-meta.xml
<CustomField>
    <fullName>locale__c</fullName>
    <label>locale</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>