force-app/main/default/objects/HP_EC_Sharegroop_Setting__mdt/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>