force-app/main/default/objects/HP_EC_Sharegroop_Setting__mdt/fields/notifyUrl__c.field-meta.xml
<CustomField>
    <fullName>notifyUrl__c</fullName>
    <label>notifyUrl</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>