force-app/main/default/objects/HP_EC_Sharegroop_Setting__mdt/fields/secure3D__c.field-meta.xml
<CustomField>
    <fullName>secure3D__c</fullName>
    <defaultValue>true</defaultValue>
    <label>secure3D</label>
    <type>Checkbox</type>
</CustomField>