force-app/main/default/objects/HP_EC_Sharegroop_Setting__mdt/fields/ux__c.field-meta.xml
<CustomField>
    <fullName>ux__c</fullName>
    <label>ux</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>